--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
   },
   "autoload": {
     "psr-4": {
-      "Triquanta\\IziTravel\\": "src"
+      "Triquanta\\IziTravel\\": "src",
+      "Triquanta\\IziTravel\\Tests\\": "tests"
     }
   }
 }
