--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "triquanta/izitravel",
   "require": {
+    "guzzlehttp/guzzle": "5.0.*",
     "php": ">=5.4",
     "phpunit/phpunit": "4.4.*"
   },
