--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ php:
 - 5.5
 - 5.6
 before_script:
-- echo "apiKey: $API_KEY" > test_configuration.local.yml
+- echo "apiKey\: $API_KEY" > test_configuration.local.yml
 script:
 - cd $TRAVIS_BUILD_DIR
 - composer install
