--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,8 @@
   "require": {
     "guzzlehttp/guzzle": "5.0.*",
     "php": ">=5.4",
+  },
+  "require-dev": {
     "phpunit/phpunit": "4.4.*",
     "symfony/yaml": "2.6.*"
   },
