--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "require": {
     "guzzlehttp/guzzle": "5.0.*",
-    "php": ">=5.4",
+    "php": ">=5.4"
   },
   "require-dev": {
     "phpunit/phpunit": "4.4.*",
