--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "4.4.*",
+    "satooshi/php-coveralls": "0.6.*",
     "symfony/yaml": "2.6.*"
   },
   "autoload": {
