--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,14 @@
   "name": "triquanta/libizi",
   "license": "MIT",
   "require": {
-    "guzzlehttp/guzzle": "5.0.*",
-    "php": ">=5.4"
+    "guzzlehttp/guzzle": "~5.0",
+    "php": ">=5.4",
+    "symfony/event-dispatcher": "~2.6"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.4.*",
-    "satooshi/php-coveralls": "0.6.*",
-    "symfony/yaml": "2.6.*"
+    "phpunit/phpunit": "~4.4",
+    "satooshi/php-coveralls": "~0.6",
+    "symfony/yaml": "~2.6"
   },
   "autoload": {
     "psr-4": {
