--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,8 @@
   "license": "MIT",
   "require": {
     "guzzlehttp/guzzle": "~5.0",
+    "iziteq/izi-api-schemes" : "dev-master",
+    "justinrainbow/json-schema": "~1.3.7",
     "php": ">=5.4",
     "symfony/event-dispatcher": "~2.6"
   },
