Keeping up with recent changes in the izi.TRAVEL MTG API.

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "require": {
     "guzzlehttp/guzzle": "~5.0",
-    "iziteq/izi-api-schemes" : "dev-master",
+    "iziteq/izi-api-schemes" : "dev-master#081a82788a81df5749da40bfc0e80e8c7e5dd9e8",
     "justinrainbow/json-schema": "~1.3.7",
     "php": ">=5.4",
     "symfony/event-dispatcher": "~2.6"
