--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 env:
   global:
   - secure: Pub+0A1pN1RifBo091ipt0WUoatLxS0jc7ZappgoK4h2vghHdC0w90uxBiTCn4nCuSOnzeUB4oQ2qGVREMtrS4pa4p/LVkSSf1Qs207+Kj6os10B5+ecfNJ/r9kfG3+BddwJWTjYvKRy07lmGiSbfIS7GKOx3Zb8ymuul2Y3rH8=
+  - secure: Vm1X+atKdU2AT44KdUD9t1GUaUY7xDCp4Nv/Ulggh4yPN3m/15vBZ2zFVvvuSePAvLLxS16dM46VC2jmGDo0PqCLTT/s+ZsQnQu6EwCfgxww2bakV22muCxcRo4PPJCm1qrLjNpKm0zOPBw85V9E/IRAZIvexQz7C31f/lkL/rk=
 notifications:
   hipchat:
     rooms:
@@ -11,7 +12,7 @@ php:
 - 5.5
 - 5.6
 before_script:
-- >
+- |
   echo "apiKey: $API_KEY" > test_configuration.local.yml
 script:
 - mkdir -p build/logs
