--- a/composer.json
+++ b/composer.json
@@ -2,16 +2,16 @@
   "name": "iziteq/libizi",
   "license": "MIT",
   "require": {
-    "guzzlehttp/guzzle": "~5.0",
+    "guzzlehttp/guzzle": "^6.3|^7.0",
     "iziteq/izi-api-schemes" : "dev-master#081a82788a81df5749da40bfc0e80e8c7e5dd9e8",
-    "justinrainbow/json-schema": "~1.4",
-    "php": "~5.4",
-    "symfony/event-dispatcher": "~2.7"
+    "justinrainbow/json-schema": "^5.2",
+    "php": ">=7.4",
+    "symfony/event-dispatcher": "^4.4 || ^5.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.7",
-    "satooshi/php-coveralls": "~0.6",
-    "symfony/yaml": "~2.7"
+    "phpunit/phpunit": "<4.8.35|<5.4.3,>=5.0",
+    "satooshi/php-coveralls": "^2.4.2",
+    "symfony/yaml": "^4|^5|^6"
   },
   "autoload": {
     "psr-4": {
@@ -22,6 +22,5 @@
     "psr-4": {
       "Triquanta\\IziTravel\\Tests\\": "tests"
     }
-  },
-  "version": "1.0.1"
+  }
 }
